
Wed Oct 13 15:12:17 CEST 2004 Paolo Molaro <lupus@ximian.com>

	* System.Resources/ResXResourceReader.cs: patch by
	 joel.reed@ddiworld.com (joel) to handle CDATA sections.

2004-05-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* System.Resources/ResXResourceWriter.cs: implemented.

2004-03-15  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* System.Windows.Forms.dll.sources: Added files

2004-01-22  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* System.Resources/ResXResourceReader.cs: read empty tags properly.
	Fixes bug #53174. Patch by Tomasz Kaszuba.

2003-08-31  Jerome Laban <jlaban@wanadoo.fr>
	* Label.cs: Fixed Text property not redrawing the label correctly.

2003-08-31  Jerome Laban <jlaban@wanadoo.fr>
	* win32functions.cs: Added GetUpdateRect function. 
	* Control.cs: Make sure to call OnPaint even if UserPaint style is not
	enabled. Get the appropriate DC for WM_PAINT operations.

2003-07-16  Peter Williams  <peter@newton.cx>

	* System.Windows.Forms.dll.sources: Don't build with two
	AssemblyInfo.cs files.

2003-07-07  Martin Willemoes Hansen <mwh@sysrq.dk>

	* System.Windows.Forms.Design/AnchorEditor.cs
	  System.Windows.Forms.Design/AxImporter.cs
	  System.Windows.Forms.Design/ComponentDocumentDesigner.cs
	  System.Windows.Forms.Design/ComponentTray.cs
	  System.Windows.Forms.Design/ControlDesigner.cs
	  System.Windows.Forms.Design/DocumentDesigner.cs
	  System.Windows.Forms.Design/FileNameEditor.cs
	  System.Windows.Forms.Design/IMenuEditorService.cs
	  System.Windows.Forms.Design/MenusCommands.cs
	  System.Windows.Forms.Design/ParentControlDesigner.cs
	  System.Windows.Forms.Design/ScrollableControlDesigner.cs
	  System.Windows.Forms.Design/SelectionRules.cs: Moved to System.Design assembly
	
2003-05-31  Paolo Molaro <lupus@ximian.com>

	* System.Resources/ResXResourceReader.cs: get simple reading and error
	checks working.

2003-03-31  Alan Tam <Tam@SiuLung.com>

	* UITypeEditor.cs: Removed.
